# RootSeg-Bidmer

./: LICENSE  README.md  pyproject.toml
scripts/: preprocess.py  reorder.py
src/rootseg/inference/: flatten_segmentations.py  segment.py  split_depths.py  visualisations.py
src/rootseg/optimisation/: PR_curves.py  optimize.py
src/rootseg/preprocess/: preprocessor.py  rename_and_order.py  utils.py
src/rootseg/training/: augmentations  augmentations.py  datasets  datasets.py  logger.py  models.py  train_model.py  training.py
