[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rootseg"
version = "0.1.0"
description = "Root image preprocessing and segmentation tools"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]